yamls/freshrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
spec:
  selector:
    app: freshrss
  ports:
    - protocol: TCP
      port: 80
      name: http
